More consistent sizing of toolbars and headers. This should keep these elements from flickering due to flex issues. Also switch icons to be more consistent, and toolbars to a slightly larger size to match updated mocks.
PiperOrigin-RevId: 378804737

--- a/lit_nlp/client/core/modules.css
+++ b/lit_nlp/client/core/modules.css
@@ -10,7 +10,7 @@
 #main-panel {
   display: flex;
   border-bottom: 1px solid #dadce0;
-  overflow-x: scroll;
+  overflow-x: auto;
 }
 
 #component-groups{
@@ -37,6 +37,8 @@
   color: #5f6368;
   background: white;
   display: flex;
+  align-items: center;
+  height: 30px;
 }
 
 
@@ -45,6 +47,8 @@
   width: 50%;
   height: 100%;
   margin-left:auto;
+  display: flex;
+  align-items: center;
 }
 
 #drag-handler {
