--- a/lit_nlp/client/modules/main_toolbar.css
+++ b/lit_nlp/client/modules/main_toolbar.css
@@ -21,7 +21,7 @@
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 3px 1px -2px rgba(0, 0, 0, .2), 0 1px 5px 0 rgba(0, 0, 0, .12);
   background-color: white;
   border-bottom: 1px solid #dadce0;
-  height: 40px;
+  height: 36px;
 }
 
 .togglable-toolbar-holder {
